# mahjongtilasto

./: .gitignore  README.md  README_eng.md  pyproject.toml  setup.cfg  setup.py  testi.py
src/: parseri.py
src/mahjongtilasto/: VERSION  __init__.py  aikaikkuna.py  argumentit.py  main.py  parseri.py
src/mahjongtilasto/cli/: cli_main.py
src/mahjongtilasto/gui/: __init__.py  gui_main.py  gui_tulostilastot.py  main_gui.py  translations.py
tests/: test_parser.py
