[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjongtilasto"
version = "2025.03.06.0"
description = "Yksinkertainen pistetilastojen hallinnointikirjasto"
readme = "README.md"
authors = [
  {name = "Pilperi"},
]
maintainers = [
  {name = "Pilperi"}
]
requires-python = ">=3.8"
dependencies = ["PyQt5", "pytest"]


[project.scripts]
mahjongtilasto = "mahjongtilasto.main:main"
