[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjongtilasto"
dynamic = ["version"]
description = "Yksinkertainen pistetilastojen hallinnointikirjasto"
readme = "README.md"
authors = [
  {name = "Pilperi"},
]
maintainers = [
  {name = "Pilperi"}
]
requires-python = ">=3.8"
dependencies = ["PyQt5", "pytest"]

[tool.setuptools.dynamic]
version = {file=["src/mahjongtilasto/VERSION"]}

[project.scripts]
mahjongtilasto = "mahjongtilasto.main:main"
