[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjongtilasto"
dynamic = ["version", "readme"]
description = "Yksinkertainen pistetilastojen hallinnointikirjasto"
authors = [
  {name = "Pilperi"},
]
maintainers = [
  {name = "Pilperi"}
]
requires-python = ">=3.8"
dependencies = ["PyQt5"]

[tool.setuptools.dynamic]
version = {attr = "mahjongtilasto.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.scripts]
mahjongtilasto = "mahjongtilasto.main:main"
